--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 orbs:
   node: circleci/node@1.1.6
-  bc-orb: evrons/bc-orb
+  bc-orb: evrons/bc-orb@0.0.1
 jobs:
   build-and-test:
     executor:
