fix spamming confirm button

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,6 @@ jobs:
           greeting: "allahu akbar"
 
 workflows:
-  run-checkov:
+  checkov:
       jobs:
-        - build-and-test
+        - run-checkov
