--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
   run-checkov:
     executor: bc-orb/default
     steps:
-      - bc-orb/greet:
+      - greet:
           greeting: "allahu akbar"
 
 workflows:
