--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     steps:
       - checkout
       - bc-orb/scan:
+          output: "kisi"
           directory: "."
           suppress: true
 workflows:
